<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NowledgeNet</string>
    <string name="action_about">About</string>
    <string name="expert">I\'m an expert, and I want to help people!</string>
    <string name="okay">I\'m doing okay, and I don\'t need help – but I\'m not confident enough to help</string>
    <string name="help">I need help.</string>
    <string name="tutor">I need a tutor – I just can\'t get the hang of this subject.</string>
    <string name="tech">Technology</string>
    <string name="welcome">Welcome to OPAL!</string>
    <string name="loginlabel">Log in to continue</string>
    <string name="aboutthisapp">About this app</string>
    <string name="createdby">Created by OPAL</string>
    <string name="copyright">Owens, Proctor and Lopez (2013)</string>
    <string name="visitinnovation">Visit Innovation Corporation!</string>
    <string name="visitdynpro">Visit Dynamic Programming!</string>
    <string name="facebooklogin">Log in</string>
    <string name="title_activity_facebook_login">Login to Facebook</string>
    <string name="title_activity_about_app">About This App</string>
    <string name="action_settings">Settings</string>
    <string name="action_achieve">Achievements</string>
    <string name="app_id">257306584421087</string>
    <string name="category">Category</string>
    <string name="security">Security</string>
    <string name="software">Software</string>
    <string name="hardware">Hardware</string>
    <string name="network">Networking</string>
    <string name="server">Servers</string>
    <string name="a_v">Audio/Video</string>
    <string name="sites">Websites</string>
    <string name="post">Post</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="med">Medium</string>
    <string name="hard">Hard</string>
    <string name="logout">Log out</string>
    <string name="OPALsite">Official Site</string>
    <string name="title_activity_achieve">Achievements</string>
    <string name="aaron_schwartz">Aaron Schwartz award</string>
    <string name="as_description">Open up NowlegeNet</string>
    <string name="linus_award">Linus Torvalds award</string>
    <string name="lt_description">Post to Facebook 10 times</string>
    <string name="richard_award">Richard Stallman award</string>
    <string name="rs_description">Post to Facebook 20 times</string>
    <string name="points">"Points: "</string>
    <string name="grace_award">Grace Hopper award</string>
    <string name="gh_hopper">Post to Facebook 50 times</string>
    <string name="play">Play</string>
    <string name="confidence_error">Select a confidence level</string>
    <string name="category_error">Select a category</string>
    <string name="difficulty_error">Select a difficulty level</string>
    <string name="lvlDiff1">easy</string>
    <string name="lvlDiff2">a challenge</string>
    <string name="lvlDiff3">really hard</string>
    <string name="requestHelp">"I need help in "</string>
    <string name="problemDiff">" and I think my problem is "</string>
</resources>
