<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AchieveActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/youwon"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/achievemenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView1"
        android:text="@string/action_achieve"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/as_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="22dp"
        android:text="@string/aaron_schwartz"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/as_description"
        android:layout_below="@+id/as_description"
        android:layout_marginTop="@dimen/smTitle"
        android:text="@string/linus_award"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/as_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/as_title"
        android:layout_below="@+id/as_title"
        android:text="@string/as_description"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01"
        android:text="@string/lt_description"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@id/textView1"
        android:layout_marginTop="@dimen/smTitle"
        android:text="@string/richard_award"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView02"
        android:text="@string/rs_description"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="@dimen/smTitle"
        android:text="@string/grace_award"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/txtPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/as_title"
        android:layout_alignRight="@+id/achievemenTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtPoints"
        android:layout_toLeftOf="@+id/txtPoints"
        android:text="@string/points"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView03"
        android:text="@string/gh_hopper"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/gray" />

    <Button
        android:id="@+id/btnGrace"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView03"
        android:layout_alignBottom="@+id/TextView03"
        android:layout_alignLeft="@+id/btnRichard"
        android:enabled="false"
        android:onClick="playGrace"
        android:text="@string/play" />

    <Button
        android:id="@+id/btnRichard"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView02"
        android:layout_alignBottom="@+id/TextView02"
        android:layout_alignRight="@+id/txtPoints"
        android:enabled="false"
        android:onClick="playRichard"
        android:text="@string/play" />

    <Button
        android:id="@+id/btnLinus"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView01"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignLeft="@+id/btnRichard"
        android:enabled="false"
        android:onClick="playLinus"
        android:text="@string/play" />

</RelativeLayout>